  * Fixed apache-ssl support (apache + libapache-mod-ssl was the only
    combination I had previously tested).
  * [Christian] Added ldap check in apache/php config.
  * [Christian] Ldap online support enabled.  Requires intensive testing
    and probably security enhancements similar to database.
  * Fixed possible infinite loop in cronjobs/calculate_user_metric.php.

 -- Roland Mas <lolando@debian.org>  Sat, 15 Sep 2001 16:35:09 +0200

sourceforge (2.5-10) unstable; urgency=low

  * I am starting to get rather confident in this package, to the point
    where I cannot think of major bugs preventing it to enter woody
    (closes: #99336).  It will still have to wait for its dependencies to
    be fulfilled and for its other RC bugs to be fixed/closed, but I won't
    artificially keep it out from testing.
  * Fixed possible double insertion of the sourceforge alias in
    /etc/aliases. 
  * Check the presence of, and when needed, add, "extension={pgsql,gd}"
    lines in /etc/php4/{apache,cgi}/php.ini files (closes: #107290).
  * Moved some code where it belongs (in the "if web_only = false"
    if-block) in sourceforge.config.
  * Added a Debconf note to remind the admin to create the SSL/TLS
    certificate.
  * A few cosmetic changes.
  * Added an "Installation notes" paragraph in README.Debian.
  * Removed an entry in the TODO file (now it's a bug on the BTS).
  * Fixed the diary stuff (viewing entries, monitoring other people's
    diary) (closes: #108166, #108169).

 -- Roland Mas <lolando@debian.org>  Fri, 10 Aug 2001 09:04:44 +0200

sourceforge (2.5-9) unstable; urgency=low

  * Added more checks into the postinst to deal with more possible errors.
  * Small fixes in postinst and postrm.
  * Changed the way we use the templates (fill-in-the-blanks.pl) and keep
    the postinst script -e (closes: #103902).
  * Continued work on db-upgrade.pl: added a function to parse SQL files.
    The first installation (database initialisation) is now done via this