@@ -1,30 +1,36 @@
 <?php
-//
-// SourceForge: Breaking Down the Barriers to Open Source Development
-// Copyright 1999-2000 (c) The SourceForge Crew
-// http://sourceforge.net
-//
+/**
+  *
+  * SourceForge Documentaion Manager
+  *
+  * SourceForge: Breaking Down the Barriers to Open Source Development
+  * Copyright 1999-2001 (c) VA Linux Systems
+  * http://sourceforge.net
+  *
+  * @version   $Id: doc_utils.php,v 1.70 2001/05/22 19:19:51 pfalcon Exp $
+  *
+  */
+
 
 /*
-	Docmentation Manager
 	by Quentin Cregan, SourceForge 06/2000
 */
 
 
-function display_groups_option($group_id=false,$checkedval='xyxy') {
+function display_groups_option($group_id=false,$checkedval='xzxz') {
 
-    if (!$group_id) {
-	exit_no_group();
-    } else {
-	$query = "select doc_group, groupname "
-	    ."from doc_groups "
-	    ."where group_id = $group_id "
-	    ."order by groupname";
-	$result = db_query($query);
+	if (!$group_id) {
+		exit_no_group();
+	} else {
+		$query = "select doc_group, groupname "
+		."from doc_groups "
+		."where group_id = $group_id "
+		."order by groupname";
+		$result = db_query($query);
 
-	echo html_build_select_box ($result,'doc_group',$checkedval);
+		echo html_build_select_box ($result,'doc_group',$checkedval);
 
-    } //end else
+	} //end else
 
 } //end display_groups_option
 
@@ -106,17 +112,20 @@ function display_docs($style,$group_id) {
 
 } //end function display_docs($style)
 
-function docman_header($title,$pagehead,$style='xyz') {
+function docman_header($title,$pagehead,$pagename,$titleval,$sectionval,$style='xyz') {
 
 	global $group_id;
 
-	$project=&project_get_object($group_id);
-	
+	$project =& group_get_object($group_id);
+	if (!$project || !is_object($project)) {
+		exit_no_group();
+	}   
+
 	if (!$project->usesDocman()) {
 		exit_error('Error','This Project Has Turned Off The Doc Manager');
 	}
 
-	site_project_header(array('title'=>$title,'group'=>$group_id,'toptab'=>'docman'));
+	site_project_header(array('title'=>$title,'group'=>$group_id,'toptab'=>'docman','pagename'=>$pagename,'titlevals'=>array($titleval),'sectionvals'=>array($sectionval)));
 
 	print "<p><b><a href=\"/docman/new.php?group_id=".$group_id."\">Submit new documentation</a> | ".
 		"<a href=\"/docman/index.php?group_id=".$group_id."\">View Documentation</a> | ".
@@ -127,20 +136,18 @@ function docman_header($title,$pagehead,$style='xyz') {
 		"<a href=\"/docman/admin/index.php?mode=editgroups&group_id=".$group_id." \">Edit Document Groups</a></b>";
 
 	} 
-	print "<p>";
-	print "<h3>$pagehead</h3>\n<P>\n";
 
 }
 
 function doc_droplist_count($l_group_id, $language_id) {
 
-	$query = "select dg.group_id, dd.language_id, count(*), sl.name"
-		." from doc_groups as dg, doc_data as dd, supported_languages as sl"
-		." where dg.doc_group = dd.doc_group "
-		." and dg.group_id = '$l_group_id' "
-		." and dd.stateid = '1' "
-		." and sl.language_id = dd.language_id "
-		." group by dd.language_id";
+	$query = "select dd.language_id, sl.name, count(*) as count
+		 from doc_groups as dg, doc_data as dd, supported_languages as sl
+		 where dg.doc_group = dd.doc_group 
+		 and dg.group_id = '$l_group_id' 
+		 and dd.stateid = '1' 
+		 and sl.language_id = dd.language_id 
+		 group by dd.language_id,sl.name";
 
 	$gresult = db_query($query);
 	
@@ -154,12 +161,14 @@ function doc_droplist_count($l_group_id, $language_id) {
 
 			if ($language_id == $grow['language_id']) {
 
-				print "<option value=\"".$grow['language_id']."\" selected>".$grow['name']." (".$grow['count(*)'].") </option>";
+				print "<option value=\"".$grow['language_id']."\" selected>".$grow['name']." (".$grow['count'].") </option>";
 			} else {
-				print "<option value=\"".$grow['language_id']."\">".$grow['name']." (".$grow['count(*)'].") </option>";
+				print "<option value=\"".$grow['language_id']."\">".$grow['name']." (".$grow['count'].") </option>";
 			}	
 		}	
 		print "</select></td><td valign=\"center\"><input type=\"submit\" value=\"Go\"></form></td></tr></table>"; 
+	} else {
+		echo db_error();
 	}
 
 
